labs/03-ingress-sidecar/hello-v3.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-v3
  namespace: hello
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello
        version: v3
    spec:
      serviceAccountName: hello-sa
      containers:
      - image: istio/examples-helloworld-v1
        name: helloworld
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: hello-v3-svc-np
  labels:
    app: hello
    version: v3
  namespace: hello
spec:
  type: NodePort
  ports:
  - name: http
    port: 5040
    targetPort: 5000
  selector:
    app: hello
    version: v3
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-v3-ing
  labels:
    app: hello
    version: v3
  annotations:
    kubernetes.io/ingress.class: istio
  namespace: hello
spec:
  rules:
  - host: v3.helloworld.com
    http:
      paths:
      - path: /hello
        backend:
          serviceName: hello-v3-svc-np
          servicePort: 5040
---
